exports[`test renders with mini player 1`] = `
<div>
<Connect(MiniPlayerWithoutData) dispatch={[Function]} audio={{...}} modal={{...}} />
<Connect(AudioPlayerUtilityWithoutData) />
</div>
`;

exports[`test renders with props 1`] = `
<div>
<Connect(AudioPlayerUtilityWithoutData) />
</div>
`;
